--- a/index.html
+++ b/index.html
@@ -2,19 +2,28 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>Bleach</title>
+  <title>Anime Baam</title>
   <style>
     body { font-family: Arial; background: #111; color: #fff; padding: 20px; }
     h1 { color: #00ffff; }
-    p { margin-bottom: 10px; }
+    .anime-list { display: flex; flex-wrap: wrap; gap: 10px; }
+    .anime { background: #222; padding: 10px; border-radius: 8px; width: 200px; }
+    .anime a { color: #00ffff; text-decoration: none; }
   </style>
 </head>
 <body>
-  <h1>Bleach</h1>
-  <p>القصة: هذا الأنمي يحتوي على قصة مشوقة ومليئة بالأحداث.</p>
-  <p>الشخصيات: يتميز الأنمي بشخصيات قوية ومثيرة للاهتمام.</p>
-  <p>الأركات: يحتوي على عدة أركات رائعة ومترابطة.</p>
-  <p>الأسلحة: تتنوع الأسلحة في هذا العالم بطريقة فريدة.</p>
-  <p>الأعداء: يوجد خصوم مميزين يشكلون تحديًا حقيقيًا للأبطال.</p>
+  <h1>مكتبة أنمي بام</h1>
+  <div class="anime-list">
+<div class="anime"><a href="anime/naruto/index.html">Naruto</a></div>
+<div class="anime"><a href="anime/one-piece/index.html">One Piece</a></div>
+<div class="anime"><a href="anime/attack-on-titan/index.html">Attack On Titan</a></div>
+<div class="anime"><a href="anime/death-note/index.html">Death Note</a></div>
+<div class="anime"><a href="anime/bleach/index.html">Bleach</a></div>
+<div class="anime"><a href="anime/demon-slayer/index.html">Demon Slayer</a></div>
+<div class="anime"><a href="anime/my-hero-academia/index.html">My Hero Academia</a></div>
+<div class="anime"><a href="anime/jujutsu-kaisen/index.html">Jujutsu Kaisen</a></div>
+<div class="anime"><a href="anime/tokyo-ghoul/index.html">Tokyo Ghoul</a></div>
+<div class="anime"><a href="anime/fullmetal-alchemist/index.html">Fullmetal Alchemist</a></div>
+  </div>
 </body>
 </html>
